# true-neutral-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.repo_name}}/: .gitignore  README.md  pyproject.toml
