[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
